gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: test-gw
  namespace: istio-ingress
spec:
  gatewayClassName: istio
  listeners:
  - name: default
    hostname: "example.com"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
